--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "mockjs": "^1.1.0",
     "register-service-worker": "^1.7.1",
+    "sinon": "^10.0.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
