--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/sinon": "^9.0.11",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
