--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "watch-ts": "tsc -w"
   },
   "dependencies": {
     "core-js": "^3.9.1",
